--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.5"
+    "@types/sinon-chai": "^3.2.12",
+    "ethereum-waffle": "^4.0.10"
   },
   "dependencies": {
-    "@chainlink/contracts": "^1.1.1",
-    "@openzeppelin/contracts": "^5.0.2"
+    "@chainlink/contracts": "^0.8.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^5.0.2",
+    "ethers": "^6.13.0",
+    "hardhat": "^2.22.5"
   }
 }
